Fix formatting and alignment issues in index.html and style.css

--- a/style.css
+++ b/style.css
@@ -19,27 +19,33 @@ body{
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    max-height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .heading{
     font-weight: 700;
     font-size: 1.2rem;
-    margin-top: 1rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    width: 100%;
+    margin: 1.5rem 0;
 }
 
 .container{
     background: linear-gradient(to right, #d3cce3, #e9e4f0);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #f2f3f7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    padding: 20px;
     border-radius: 40px;
     box-shadow: -2px -2px 4px 0px #ffffff, 50px 50px 50px 0px rgba(0, 0, 0, .25);
     height: auto;
-    width: auto;
-    padding-bottom: 1.5rem;
+    margin-top: 5rem; 
 }
 
 #bgm-mute{
@@ -48,7 +54,6 @@ body{
 
 .bgm{
   font-size: 1.5rem;
-  margin-left: 45%;
   margin-top: 2rem;
   background: radial-gradient(circle, rgba(247,150,192,1) 0%, rgba(118,174,241,1) 100%);
   border: none;
